// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserStatus> should render correctly 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #189B55;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="available"
  />
</div>
`;

exports[`<UserStatus> should render correctly when size is small 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 12px;
  width: 12px;
  min-width: 12px;
  min-height: 12px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #189B55;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="available"
  />
</div>
`;

exports[`<UserStatus> should render correctly when status is away 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #DD7011;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="away"
  />
</div>
`;

exports[`<UserStatus> should render correctly when status is busy 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #CB2233;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="busy"
  />
</div>
`;

exports[`<UserStatus> should render correctly when status is doNotDisturb 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #CB2233;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="doNotDisturb"
  />
</div>
`;

exports[`<UserStatus> should render correctly when status is offline 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #666666;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="offline"
  />
</div>
`;

exports[`<UserStatus> should render correctly when status is onBreak 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #666666;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="onBreak"
  />
</div>
`;

exports[`<UserStatus> should render correctly when status is onCall 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #CB2233;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="onCall"
  />
</div>
`;

exports[`<UserStatus> should render correctly when status is workingOffline 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  box-sizing: border-box;
  height: 20px;
  width: 20px;
  min-width: 20px;
  min-height: 20px;
}

.c0 .presence-border {
  fill: #FFF;
}

.c0 .presence-background {
  fill: #DD7011;
}

<div
  className="c0"
>
  <UserStatusIcon
    status="workingOffline"
  />
</div>
`;
